[package]
name = "thingbuf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = ["alloc"]
alloc = []
default = ["std"]

[dependencies]

[dev-dependencies]
tokio = { version = "1.14.0", features = ["rt", "rt-multi-thread", "macros"] }
# So that we can use `poll_fn` in tests.
futures = "0.3"

[target.'cfg(loom)'.dev-dependencies]
loom = { version = "0.5.3", features = ["checkpoint", "futures"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }

[target.'cfg(bench)'.dev-dependencies]
criterion = { version = "0.3.5", features = ["async_tokio"] }

# for comparison benchmarks
tokio = { version = "1.14.0", features = ["rt", "rt-multi-thread", "macros", "sync"] }
crossbeam = "0.8.1"
async-std = "1"

# Custom profile for Loom tests: enable release optimizations so that the loom
# tests are less slow, but don't disable debug assertions.
[profile.loom]
inherits = "test"
lto = true
opt-level = 3

[[bench]]
name = "sync_mpsc"
harness = false

[[bench]]
name = "async_mpsc"
harness = false

[patch.crates-io]
loom = { git = "https://github.com/tokio-rs/loom", branch = "eliza/fix-double-panic-in-drop" }