[workspace]
members = [
    ".",
    "bench"
]

[package]
name = "thingbuf"
version = "0.1.0"
edition = "2021"
rust-version = "1.57.0"
author = "Eliza Weisman <eliza@buoyant.io>"
license = "MIT"
repository = "https://github.com/hawkw/thingbuf"
homepage = "https://github.com/hawkw/thingbuf"
description = """
I'm at the buffer pool. I'm at the MPSC channel. I'm at the combination MPSC channel and buffer pool.
"""
keywords = ["lock-free", "queue", "channel", "mpsc", "pool"]
categories = ["asynchronous", "concurrency", "data-structures", "no-std"]
exclude = ["/.github", "/.cargo", "/bin", "/bench", "/assets"]

[features]
std = ["alloc", "parking_lot"]
alloc = []
default = ["std"]
static = []

[dependencies]
pin-project = "1"
parking_lot = { version = "0.12", optional = true, default-features = false }

[dev-dependencies]
tokio = { version = "1.14.0", features = ["rt", "rt-multi-thread", "macros", "sync"] }
# So that we can use `poll_fn` in tests.
futures-util = { version = "0.3", default-features = false }

[target.'cfg(loom)'.dev-dependencies]
loom = { version = "0.5.4", features = ["checkpoint", "futures"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }

# Custom profile for Loom tests: enable release optimizations so that the loom
# tests are less slow, but don't disable debug assertions.
[profile.loom]
inherits = "test"
lto = true
opt-level = 3

[patch.crates-io]
loom = { git = "https://github.com/tokio-rs/loom", rev = "555b52fdb267964f0950a52be87b0f28c40b054c" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
